--- a/helloworld_project/.gitignore
+++ b/helloworld_project/.gitignore
@@ -1,115 +1,9 @@
-# Django #
-*.log
-*.pot
+__pycache__/
 *.pyc
-__pycache__
-db.sqlite3
-media
-
-# Backup files #
-*.bak
-
-# Python #
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller #
-*.manifest
-*.spec
-
-# Installer logs #
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports #
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
-# Environments #
+*.pyo
+*.pyd
+*.db
 .env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+.git
+.gitlab-ci.yml
 
-# mkdocs documentation #
-/site
-
-# Django stuff:
-*.log
-local_settings.py
-
-# Docker #
-docker-compose.override.yml
-
-# Database #
-*.sqlite3
-*.sqlite3-journal
-
-# Visual Studio Code #
-.vscode/
-.history
-*.code-workspace
-
-# PyCharm #
-.idea/
-*.iws
-*.iml
-*.ipr
-
-# macOS #
-.DS_Store
-.AppleDouble
-.LSOverride
-._*
-
-# Windows #
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
-
-# Node #
-node_modules/
-npm-debug.log
-yarn-error.log
-
-# Local Static files #
-staticfiles/
-
-# Secrets #
-*.env.local
-*.env.development.local
-*.env.test.local
-*.env.production.local
-
-# CI/CD #
-build_version.txt
