--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ workflow:
     - chmod 600 ~/.ssh/id_rsa
     - eval $(ssh-agent -s)
     - ssh-add ~/.ssh/id_rsa
-    - ssh-keyscan -p $SSH_PORT $SERVER_IP >> ~/.ssh/known_hosts
+    - ssh-keyscan -p $SSH_PORT $SERVER_IP >> ~/.ssh/known_hosts || true
 
 build-image:
   stage: build
